# bevy-tag

./: Cargo.toml  README.md
crates/bevy-tag-build/: Cargo.toml
crates/bevy-tag-build/src/: codegen.rs  lib.rs  lock.rs  toml_parser.rs
crates/bevy-tag-build/tests/: integration_test.rs
crates/bevy-tag-macro/: Cargo.toml
crates/bevy-tag-macro/src/: demo.rs  lib.rs  traits.rs
examples/: alias_system.rs  basic_namespace.rs  bevy_integration.rs  dynamic_registration.rs  metadata.rs  redirect_system.rs  subtree_check.rs
src/: bevy.rs  hash.rs  layout.rs  lib.rs  registry.rs  traits.rs
tests/: metadata_test.rs  same_name_test.rs
