[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Shaopeng-Luan"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Shaopeng-Luan/bevy-tag"

[workspace.dependencies]
bevy-tag-macro = { version = "0.1.0", path = "crates/bevy-tag-macro" }
serde = { version = "1.0", features = ["derive"] }

[package]
name = "bevy-tag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A hierarchical tag system inspired by UE5 GameplayTags, with stable GIDs and O(1) subtree checks"
keywords = ["gamedev", "bevy", "tags", "ecs", "hierarchy"]
categories = ["game-development", "data-structures"]

[dependencies]
bevy-tag-macro.workspace = true
serde.workspace = true
zerocopy = { version = "0.8", features = ["derive"] }
bevy = { version = "0.18", default-features = false }

[dev-dependencies]
serde_json = "1.0"
