[package]
name = "bevy-tag-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macro for bevy-tag hierarchical tag system"
keywords = ["gamedev", "bevy", "tags", "macro", "proc-macro"]
categories = ["game-development", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full"] }
proc-macro-crate = "3.2.0"
